fix(burgermenu): fix burger menu bugs
Fixed various layout bugs with the burger menu overlay, by adding some
javascript and changing layout in html.

--- a/css/burgermenu.css
+++ b/css/burgermenu.css
@@ -15,7 +15,7 @@ nav {
 }
 
 nav.active {
-  background-color: none;
+  background-color: unset;
 }
 
 .logo {
