--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 main {
-  margin-top: 10vh;
   width: 100vw;
   background-color: var(--bg);
   background-image: url("../imgs/index/illustrationtable_mobil.svg");
@@ -9,7 +8,7 @@ main {
 }
 
 .hero {
-  padding: 5vh 1vw 0vh 1vw;
+  padding: 15vh 1vw 0vh 1vw;
   font-family: "Averia Serif Libre";
   font-size: 2.2rem;
   color: var(--fg_alt);
